--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ a {
   --base-text-weight-extrabold: 800;
 
   /* 폰트 사이즈 */
+  --base-text-size-xsmall: 0.5rem;
   --base-text-size-small: 0.75rem;
   --base-text-size-normal: 1rem;
   --base-text-size-medium: 1.25rem;
@@ -64,6 +65,9 @@ a {
   --toss-text-color-1: #1a1e27;
   --toss-text-color-2: #505866;
   --toss-text-color-3: #b1b8c0;
+
+  /* 메인 컬러 */
+  --main-color-orange: #ff9b25;
 }
 
 body.dark {
@@ -80,4 +84,13 @@ body.light {
 
   color: var(--base-text-color);
   background-color: var(--base-background-color);
+
+  --project-upload-modal-title-color: var(--main-color-orange);
+  --project-upload-modal-subtitle-color: #656565;
+
+  --project-upload-modal-input-underline-color: var(--main-color-orange);
+  --project-upload-modal-input-required-color: #ff0000;
+
+  --project-upload-modal-hashtag-background-color: var(--main-color-orange);
+  --project-upload-modal-hashtag-text-color: #f7f7f8;
 }
