feat: 헤더 컴포넌트
- 토글 버튼 스타일 변경
- 모달 버튼 제거 => 메인 페이지 Description 컴포넌트로 이동 예정
- 라이트 / 다크모드 스타일 적용

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,11 @@ body.dark {
   color: var(--base-text-color);
   background-color: var(--base-background-color);
 
+  --header-background-color: var(--base-background-color-dark);
+
+  --dark-mode-toggle-border-color: var(--main-color-orange);
+  --dark-mode-toggle-background-color: var(--main-color-orange);
+
   --project-upload-modal-title-color: var(--main-color-orange);
   --project-upload-modal-subtitle-color: #dedede;
 
@@ -105,6 +110,11 @@ body.light {
 
   color: var(--base-text-color);
   background-color: var(--base-background-color);
+
+  --header-background-color: var(--base-background-color-light);
+
+  --dark-mode-toggle-border-color: var(--main-color-orange);
+  --dark-mode-toggle-background-color: var(--main-color-orange);
 
   --project-upload-modal-title-color: var(--main-color-orange);
   --project-upload-modal-subtitle-color: #656565;
