--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,9 @@ a {
   --base-text-weight-2extrabold: 900;
 
   /* 폰트 사이즈 */
-  --base-text-size-xsmall: 0.5rem;
+  --base-text-size-3xsmall: 0.6rem;
+  --base-text-size-2xsmall: 0.7rem;
+  --base-text-size-xsmall: 0.8rem;
   --base-text-size-small: 0.9rem;
   --base-text-size-normal: 1rem;
   --base-text-size-medium: 1.25rem;
@@ -106,7 +108,7 @@ body.light {
   --mainpage-modal-button-border-color: var(--main-color-orange);
 
   --mainpage-navigation-bar-item-background-color: var(--main-color-orange);
-  --mainpage-navigation-bar-item-text-color: #ffffff;
+  --mainpage-navigation-bar-clicked-item-text-color: #333333;
 
   --mainpage-cardlist-title-text-color: var(--main-color-orange);
 
@@ -123,6 +125,7 @@ body.light {
   --mainpge-cardlist-likes-text-color: #bcbcbc;
 
   --detailpage-project-title-text-color: var(--main-color-orange);
+  --detailpage-project-created-text-color: #656565;
 
   --detailpage-button-text-color: var(--main-color-orange);
   --detailpage-button-border-color: var(--main-color-orange);
@@ -136,6 +139,7 @@ body.light {
   --detailpage-comment-length-text-color: #9e9e9e;
 
   --detailpage-commenter-name-text-color: #2c2c2c;
+  --detailpage-commenter-created-text-color: #656565;
 
   --detailpage-commenter-content-text-color: #2c2c2c;
 }
@@ -177,7 +181,7 @@ body.dark {
   --mainpage-modal-button-border-color: var(--main-color-orange);
 
   --mainpage-navigation-bar-item-background-color: var(--main-color-orange);
-  --mainpage-navigation-bar-item-text-color: #343434;
+  --mainpage-navigation-bar-clicked-item-text-color: #FFFFFF;
 
   --mainpage-cardlist-title-text-color: var(--main-color-orange);
 
@@ -194,6 +198,7 @@ body.dark {
   --mainpage-cardlist-likes-text-color: #bcbcbc;
 
   --detailpage-project-title-text-color: var(--main-color-orange);
+  --detailpage-project-created-text-color: #dedede;
 
   --detailpage-project-readme-text-color: #343434;
 
@@ -210,6 +215,7 @@ body.dark {
   --detailpage-comment-length-text-color: #b1b1b1;
 
   --detailpage-commenter-name-text-color: #dedede;
+  --detailpage-commenter-created-text-color: #b1b1b1;
 
   --detailpage-commenter-content-text-color: #dedede;
 }
