feat: BaseDescription Atom 컴포넌트 구현
- 컴포넌트
- 스타일
- 스토리북
- 타입

--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -64,8 +64,12 @@ html {
 
 body.light {
   background-color: var(--base-background-color-light);
+
+  --base-description-text-color: #747474;
 }
 
 body.dark {
   background-color: var(--base-background-color-dark);
+
+  --base-description-text-color: #dedede;
 }
