--- a/src/index.css
+++ b/src/index.css
@@ -26,26 +26,29 @@ a {
   text-decoration: none;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 :root {
   /* 폰트 두께 */
   --base-text-weight-normal: 400;
   --base-text-weight-medium: 500;
   --base-text-weight-semibold: 600;
   --base-text-weight-bold: 700;
-  --base-text-weight-extrabold: 800;
-  --base-text-weight-2extrabold: 900;
+  --base-text-weight-xbold: 800;
+  --base-text-weight-2xbold: 900;
 
   /* 폰트 사이즈 */
-  --base-text-size-3xsmall: 0.6rem;
-  --base-text-size-2xsmall: 0.7rem;
-  --base-text-size-xsmall: 0.8rem;
-  --base-text-size-small: 0.9rem;
+  --base-text-size-small: 0.75rem;
   --base-text-size-normal: 1rem;
-  --base-text-size-medium: 1.25rem;
-  --base-text-size-large: 1.5rem;
-  --base-text-size-xlarge: 2rem;
-  --base-text-size-2xlarge: 2.5rem;
-  --base-text-size-3xlarge: 3rem;
+  --base-text-size-large: 1.25rem;
+  --base-text-size-xlarge: 1.5rem;
+  --base-text-size-2xlarge: 1.75rem;
+  --base-text-size-3xlarge: 2rem;
+  --base-text-size-4xlarge: 2.5rem;
+  --base-text-size-5xlarge: 3rem;
+  --base-text-size-6xlarge: 4rem;
 
   /* 폰트 컬러 */
   --base-text-color-dark: rgb(255, 255, 255);
@@ -55,30 +58,12 @@ a {
   --base-background-color-dark: rgb(34, 34, 34);
   --base-background-color-light: rgb(255, 255, 255);
 
-  /* 토스 메인 컬러 */
-  --toss-main-color-blue-1: rgb(0, 100, 255);
-  --toss-main-color-blue-2: #4880ee;
-  --toss-main-color-blue-3: #83b4f9;
-
-  --toss-main-color-gray-1: rgb(32, 35, 50);
-  --toss-main-color-gray-2: #505866;
-  --toss-main-color-gray-3: #b1b8c0;
-
-  /* 토스 텍스트 컬러 */
-  --toss-text-color-1: #1a1e27;
-  --toss-text-color-2: #505866;
-  --toss-text-color-3: #b1b8c0;
-
   /* 메인 컬러 */
   --main-color-orange: #ff9b25;
 }
 
 body.light {
-  --base-text-color: var(--base-text-color-light);
-  --base-background-color: var(--base-background-color-light);
-
-  color: var(--base-text-color);
-  background-color: var(--base-background-color);
+  background-color: var(--base-background-color-light);
 
   --header-background-color: var(--base-background-color-light);
 
@@ -145,11 +130,7 @@ body.light {
 }
 
 body.dark {
-  --base-text-color: var(--base-text-color-dark);
-  --base-background-color: var(--base-background-color-dark);
-
-  color: var(--base-text-color);
-  background-color: var(--base-background-color);
+  background-color: var(--base-background-color-dark);
 
   --header-background-color: var(--base-background-color-dark);
 
@@ -181,7 +162,7 @@ body.dark {
   --mainpage-modal-button-border-color: var(--main-color-orange);
 
   --mainpage-navigation-bar-item-background-color: var(--main-color-orange);
-  --mainpage-navigation-bar-clicked-item-text-color: #FFFFFF;
+  --mainpage-navigation-bar-clicked-item-text-color: #ffffff;
 
   --mainpage-cardlist-title-text-color: var(--main-color-orange);
 
@@ -218,4 +199,29 @@ body.dark {
   --detailpage-commenter-created-text-color: #b1b1b1;
 
   --detailpage-commenter-content-text-color: #dedede;
+}
+
+/* 새로 변경될 css */
+body.light {
+  background-color: var(--base-background-color-light);
+
+  --header-background-color: rgba(255, 255, 255, 0.72);
+  --header-shadow-color: rgb(234 234 236);
+
+  --base-description-text-color: #747474;
+
+  --card-created-text-color: #afafaf;
+  --card-description-text-color: #181818;
+}
+
+body.dark {
+  background-color: var(--base-background-color-dark);
+
+  --header-background-color: rgba(34, 34, 34, 0.72);
+  --header-shadow-color: rgb(2 1 1);
+
+  --base-description-text-color: #dedede;
+
+  --card-created-text-color: #bcbcbc;
+  --card-description-text-color: #f2f2f2;
 }
