--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -73,6 +73,8 @@ body.light {
 
   --card-created-text-color: #afafaf;
   --card-description-text-color: #333333;
+
+  --navigation-item-clicked-text-color: #333333;
 }
 
 body.dark {
@@ -85,4 +87,6 @@ body.dark {
 
   --card-created-text-color: #bcbcbc;
   --card-description-text-color: #f2f2f2;
+
+  --navigation-item-clicked-text-color: #ffffff;
 }
