feat: SideBar / SideBarItem 컴포넌트 구현
- 타입
- 스토리
- 스타일

--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -80,11 +80,24 @@ body.light {
   --card-created-text-color: #afafaf;
   --card-description-text-color: #000000;
 
+  --card-overlay-layer: linear-gradient(
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 60%,
+    rgb(255, 255, 255) 100%
+  );
+
   --navigation-item-clicked-text-color: #333333;
 
   --search-bar-background-color: #ffffff68;
   --search-bar-border-color: #ffffff68;
   --search-bar-text-color: #000000;
+
+  --scroll-catcher-text-color: #000000;
+
+  --side-bar-item-text-color: rgb(112, 112, 112);
+  --side-bar-item-background-color-hover: #ffffff;
+
+  --side-bar-border-bottom-color: rgb(234, 234, 236);
 }
 
 body.dark {
@@ -104,9 +117,22 @@ body.dark {
   --card-created-text-color: #bcbcbc;
   --card-description-text-color: #ffffff;
 
+  --card-overlay-layer: linear-gradient(
+    rgba(49, 49, 49, 0) 0%,
+    rgba(49, 49, 49, 0.8) 60%,
+    rgb(49, 49, 49) 100%
+  );
+
   --navigation-item-clicked-text-color: #ffffff;
 
   --search-bar-background-color: #ffffff18;
   --search-bar-border-color: #ffffff18;
   --search-bar-text-color: #ffffff;
+
+  --scroll-catcher-text-color: #ffffff;
+
+  --side-bar-item-text-color: #848484;
+  --side-bar-item-background-color-hover: rgb(72, 72, 72);
+
+  --side-bar-border-bottom-color: rgb(21, 21, 19);
 }
