feat: 헤더 컴포넌트 / 다크모드 토글 수정

--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -71,6 +71,8 @@ body.light {
 
   --base-description-text-color: #747474;
 
+  --text-input-text-color: #000000;
+
   --card-background-color: #ffffff;
   --card-background-color-hover: rgb(253, 253, 255);
   --card-background-box-shadow-color: 0, 0, 0;
@@ -98,6 +100,12 @@ body.light {
   --side-bar-item-background-color-hover: #ffffff;
 
   --side-bar-border-bottom-color: rgb(234, 234, 236);
+
+  --modal-header-description-text-color: #747474;
+
+  --modal-background-color: var(--base-background-color-light);
+
+  --modal-input-text-color: #000000;
 }
 
 body.dark {
@@ -106,7 +114,9 @@ body.dark {
   --header-background-color: rgba(34, 34, 34, 0.72);
   --header-shadow-color: rgb(2 1 1);
 
-  --base-description-text-color: #dedede;
+  --base-description-text-color: #747474;
+
+  --text-input-text-color: #ffffff;
 
   --card-background-color: rgb(49, 49, 49);
   --card-background-color-hover: #343434;
@@ -135,4 +145,10 @@ body.dark {
   --side-bar-item-background-color-hover: rgb(72, 72, 72);
 
   --side-bar-border-bottom-color: rgb(21, 21, 19);
+
+  --modal-header-description-text-color: #747474;
+
+  --modal-background-color: var(--base-background-color-dark);
+
+  --modal-input-text-color: #ffffff;
 }
